# datascience-boilerplate

./: .gitignore  Pipfile  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitignore  Dockerfile  Pipfile  README.md  makefile  pyproject.toml  setup.py
{{ cookiecutter.project_name }}/.github/workflows/: deploy.yaml  test_workflow.yaml
{{ cookiecutter.project_name }}/scripts/: code_quality.py  setup_env
{{ cookiecutter.project_name }}/tests/: test_dummy.py
